style: fixed editor container overflow

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -19,17 +19,17 @@ body {
     Arial, sans-serif;
 }
 
+.scroll-container {
+  background-color: beige;
+  height: 180px;
+}
+
 .editor-container {
   display: flex;
   flex: 1;
   flex-direction: column;
-  border: 1px solid #ccc;
   gap: 24px;
   padding: 24px;
-
-  @media (min-width: 768px) {
-    flex-direction: row;
-  }
 }
 
 #root,
@@ -38,6 +38,11 @@ body {
   flex: 1;
   display: flex;
   flex-direction: column;
+}
+
+.editor-wrapper {
+  width: 100%;
+  max-width: 100%;
 }
 
 .editor-wrapper .ql-editor {
@@ -62,11 +67,7 @@ body {
 .active-users {
   background-color: #fff;
   border: 1px solid #ccc;
-  order: -1;
-
-  @media (min-width: 768px) {
-    order: 1;
-  }
+  width: 100%;
 
   @media (min-width: 440px) {
     min-width: 250px;
